# morphdraft

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 全平台打包命令.md
samples/: fragment-demo.md  full-syntax.md  ppt-mixed-layouts.md  showcase-document.md  showcase-slides.md
scripts/: package-all.mjs  run-tauri-with-rustup.mjs
src/: App.vue  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppDialog.vue  AppLogo.vue  BacklinksPanel.vue  CardEditor.vue  ChipEditorPopover.vue  CommandPalette.vue  DocumentSavePopover.vue  EditorPane.vue  ExportPreview.vue  GlobalSearch.vue  HelpDialog.vue  HoverPreviewCard.vue  Icon.vue  ImportProgressPanel.vue  LinkEditorPopover.vue  ModeControls.vue  OutlinePanel.vue  ProblemsPanel.vue  SelectMenu.vue  SettingsDialog.vue  Sidebar.vue  SlideNavigator.vue  StatusBar.vue  TableContextMenu.vue  TableToolbar.vue  ThemePicker.vue  Toolbar.vue  TopSettingsControls.vue
src/composables/: useDialog.ts  useFileDropImport.ts  useFileWatcher.ts  useInlinePreviewPanel.ts  usePresenter.ts  usePreviewRender.ts  useSafeRename.ts  useWheelZoom.ts  useWorkspaceDiagnostics.ts  useWorkspaceIndex.ts
src/config/: brand.ts
src/core/: appCommands.ts  assets.ts  clipboard.ts  commands.ts  configMirror.ts  diff.ts  docBackend.ts  docTypes.ts  errors.ts  fileEvents.ts  fonts.ts  fsUtil.ts  fsVault.ts  localStore.ts  (+6 more)
(+237 files in other folders)
